@@ -4,6 +4,9 @@ module ActiveRecord
       # Quotes the column value to help prevent
       # {SQL injection attacks}[http://en.wikipedia.org/wiki/SQL_injection].
       def quote(value, column = nil)
+        # records are quoted as their primary key
+        return value.quoted_id if value.respond_to?(:quoted_id)
+
         case value
           when String
             if column && column.type == :binary && column.class.respond_to?(:string_to_binary)
